// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
  id={null}
  onClick={null}
>
  <p
    className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
    fontSize="1rem"
    fontWeight={500}
    id={null}
    letterSpacing="0.5px"
  >
    LG
  </p>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jWbAEb"
  id={null}
  rows={null}
>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      AB
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      CD
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      ST
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      UV
    </p>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jWbAEb"
  id={null}
  rows={null}
>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      DF
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 endJKL"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      IN
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 hbUPJX"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      SC
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 eSPFbP"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      WN
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 laCJqS"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      AL
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 enybuo"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      LN
    </p>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jWbAEb"
  id={null}
  rows={null}
>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-exclamation fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
      color={null}
      data-icon="exclamation"
      data-prefix="fas"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 192 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
      color={null}
      data-icon="bookmark"
      data-prefix="fas"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 384 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
      color={null}
      data-icon="home-alt"
      data-prefix="fas"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-envelope fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
      color={null}
      data-icon="envelope"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 dNIosZ"
  id={null}
  rows={null}
>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 fAHlJO"
    id={null}
    onClick={null}
    title="Placeholder"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kQbZaI"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    />
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 fAHlJO"
    id={null}
    onClick={null}
    title="Woman"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kQbZaI"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    />
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 fAHlJO"
    id={null}
    onClick={null}
    title="Man"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kQbZaI"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    />
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 fAHlJO"
    id={null}
    onClick={null}
    title="Girl"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kQbZaI"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    />
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 fAHlJO"
    id={null}
    onClick={null}
    title="Boy"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kQbZaI"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    />
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 fAHlJO"
    id={null}
    onClick={null}
    title="Spiderman"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kQbZaI"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    />
  </div>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jpLrON"
  id={null}
  rows={null}
>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 gPYQyu"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 jVCgDD"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      xs
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 cwoBjW"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 jWGGAK"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      sm
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kHVYKV"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      df
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 fAHlJO"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 kQbZaI"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      lg
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 eYsOly"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 jnQhZg Avatar__AvatarText-sc-1vuf9om-0 jVChNe"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      xl
    </p>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 gPYQyu"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 KvPPN"
      color={null}
      data-icon="home-alt"
      data-prefix="fas"
      focusable="false"
      fontSize="0.75em"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 cwoBjW"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 gJgpSZ"
      color={null}
      data-icon="home-alt"
      data-prefix="fas"
      focusable="false"
      fontSize="0.875em"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 htTgGu"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
      color={null}
      data-icon="home-alt"
      data-prefix="fas"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 fAHlJO"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 mxeTQ"
      color={null}
      data-icon="home-alt"
      data-prefix="fas"
      focusable="false"
      fontSize="1.35em"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="Avatar__TagContainer-sc-1vuf9om-2 eYsOly"
    id={null}
    onClick={null}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-home-alt fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 hAvZIL"
      color={null}
      data-icon="home-alt"
      data-prefix="fas"
      focusable="false"
      fontSize="1.5em"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</section>
`;
